comm_badge/build/log/idf_py_stdout_output_33488
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\windows\system32\cmd.exe /C "cd /D C:\Users\Stephen\dev\CommBadge\comm_badge\build\bootloader && C:\Users\Stephen\.espressif\python_env\idf6.0_py3.14_env\Scripts\python.exe C:/esp/v6.0/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/Stephen/dev/CommBadge/comm_badge/build/bootloader/bootloader.bin"
Bootloader binary size 0x57e0 bytes. 0x2820 bytes (31%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/audio_service/CMakeFiles/__idf_audio_service.dir/audio_service.c.obj
FAILED: esp-idf/audio_service/CMakeFiles/__idf_audio_service.dir/audio_service.c.obj 
ccache C:\Users\Stephen\.espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v6.0\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Stephen/dev/CommBadge/comm_badge/build/config -IC:/Users/Stephen/dev/CommBadge/comm_badge/components/audio_service -IC:/esp/v6.0/esp-idf/components/esp_libc/platform_include -IC:/esp/v6.0/esp-idf/components/freertos/config/include -IC:/esp/v6.0/esp-idf/components/freertos/config/include/freertos -IC:/esp/v6.0/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v6.0/esp-idf/components/freertos/esp_additions/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v6.0/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/etm/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/modem/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/esp/v6.0/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/esp/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/esp/v6.0/esp-idf/components/heap/include -IC:/esp/v6.0/esp-idf/components/heap/tlsf -IC:/esp/v6.0/esp-idf/components/log/include -IC:/esp/v6.0/esp-idf/components/soc/include -IC:/esp/v6.0/esp-idf/components/soc/esp32s3 -IC:/esp/v6.0/esp-idf/components/soc/esp32s3/include -IC:/esp/v6.0/esp-idf/components/soc/esp32s3/register -IC:/esp/v6.0/esp-idf/components/hal/platform_port/include -IC:/esp/v6.0/esp-idf/components/hal/esp32s3/include -IC:/esp/v6.0/esp-idf/components/hal/include -IC:/esp/v6.0/esp-idf/components/esp_rom/include -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32s3/include -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -IC:/esp/v6.0/esp-idf/components/esp_rom/esp32s3 -IC:/esp/v6.0/esp-idf/components/esp_common/include -IC:/esp/v6.0/esp-idf/components/esp_system/include -IC:/esp/v6.0/esp-idf/components/esp_system/port/soc -IC:/esp/v6.0/esp-idf/components/esp_system/port/include/private -IC:/esp/v6.0/esp-idf/components/esp_stdio/include -IC:/esp/v6.0/esp-idf/components/xtensa/esp32s3/include -IC:/esp/v6.0/esp-idf/components/xtensa/include -IC:/esp/v6.0/esp-idf/components/xtensa/deprecated_include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpio/include -IC:/esp/v6.0/esp-idf/components/esp_hal_gpio/esp32s3/include -IC:/esp/v6.0/esp-idf/components/esp_hal_usb/include -IC:/esp/v6.0/esp-idf/components/esp_hal_usb/esp32s3/include -IC:/esp/v6.0/esp-idf/components/esp_hal_pmu/include -IC:/esp/v6.0/esp-idf/components/esp_hal_pmu/esp32s3/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/v6.0/esp-idf/components/esp_hal_ana_conv/esp32s3/include -IC:/esp/v6.0/esp-idf/components/esp_hal_dma/include -IC:/esp/v6.0/esp-idf/components/esp_hal_dma/esp32s3/include -IC:/esp/v6.0/esp-idf/components/lwip/include -IC:/esp/v6.0/esp-idf/components/lwip/include/apps -IC:/esp/v6.0/esp-idf/components/lwip/lwip/src/include -IC:/esp/v6.0/esp-idf/components/lwip/port/include -IC:/esp/v6.0/esp-idf/components/lwip/port/freertos/include -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v6.0/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/v6.0/esp-idf/components/esp_driver_i2s/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2s/include -IC:/esp/v6.0/esp-idf/components/esp_hal_i2s/esp32s3/include -IC:/esp/v6.0/esp-idf/components/esp_driver_gpio/include @"C:/Users/Stephen/dev/CommBadge/comm_badge/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/Stephen/dev/CommBadge/comm_badge=. -fmacro-prefix-map=C:/esp/v6.0/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/audio_service/CMakeFiles/__idf_audio_service.dir/audio_service.c.obj -MF esp-idf\audio_service\CMakeFiles\__idf_audio_service.dir\audio_service.c.obj.d -o esp-idf/audio_service/CMakeFiles/__idf_audio_service.dir/audio_service.c.obj -c C:/Users/Stephen/dev/CommBadge/comm_badge/components/audio_service/audio_service.c
C:/Users/Stephen/dev/CommBadge/comm_badge/components/audio_service/audio_service.c: In function 'audio_service_init':
C:/Users/Stephen/dev/CommBadge/comm_badge/components/audio_service/audio_service.c:175:14: error: 'i2s_std_slot_config_t' has no member named 'msb_right'
  175 |             .msb_right      = true,
      |              ^~~~~~~~~
ninja: build stopped: subcommand failed.
